feat(frontend): Generate all frontend components and build out footer; chore(core): Reorganize this README.md and mock-ups, and configure Jest & ESLint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+<bb-header></bb-header>
 <div>
 	<h1>Brewski Bets</h1>
 	<p>Coming soon!</p>
 </div>
+<bb-bet-table></bb-bet-table>
+<bb-footer></bb-footer>
