feat(frontend): Create basic app layout; test(frontend): Write a couple basic tests for footer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <bb-header></bb-header>
-<div>
-	<h1>Brewski Bets</h1>
-	<p>Coming soon!</p>
-</div>
-<bb-bet-table></bb-bet-table>
+<main>
+	<bb-bet-table></bb-bet-table>
+</main>
 <bb-footer></bb-footer>
