--- a/src/app/bet-table/bet-table.component.html
+++ b/src/app/bet-table/bet-table.component.html
@@ -1,1 +1,7 @@
-<p>(table)</p>
+<div>
+	<p>
+		<a href="https://github.com/mwiraszka/BrewskiBets#readme"
+			 target="_blank">Coming soon!
+		</a>
+	</p>
+</div>
