--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,19 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-}
-
-div {
-  width: 200px;
-  border: 1px solid rgba(50,50,50,0.2);
   text-align: center;
+  min-height: 100vh;
 }
 
-h1 {
-  font-size: 20px;
+main {
+  flex-grow: 1;
+  width: 100%;
+  background-color: #fafafa;
+}
+
+bb-header,
+bb-footer {
+  flex-shrink: 0;
+  width: 100%;
+  background-color: #f0ebdd;
 }
