--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,7 @@
-<small>
-	Copyright &copy; {{ currentYear }} <b>Brewski Bets</b>
-</small>
+<small>Copyright &copy; {{ currentYear }} <b>Brewski Bets</b></small>
 
 <address>
-	<p>v{{ version }}&nbsp;</p>
+	<p>v{{ version }}</p>
 	<a href="https://github.com/mwiraszka/BrewskiBets#readme"
 		 target="_blank">See open-source code repository
 	</a>
