--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
-<h1>Brewski Bets</h1>
-<img src="assets/bb-logo.svg"
-		 alt="Logo" />
+<div class="app-title">
+	<h1>Brewski Bets</h1>
+	<img src="assets/bb-logo.svg"
+			 alt="Logo" />
+</div>
+<h2>Official beer bets for<br />FIFA World Cup Qatar 2022&#8482;</h2>
