--- a/src/app/bet-table/bet-table.component.scss
+++ b/src/app/bet-table/bet-table.component.scss
@@ -8,7 +8,7 @@
 
 table {
   max-width: 600px;
-  box-shadow: 3px 2px 8px 0 #aaa;
+  box-shadow: 3px 2px 8px 0 hsla(0, 0%, 89%, 0.7);
   overflow: hidden;
   border-radius: 4px;
   border-collapse: collapse;
@@ -16,7 +16,7 @@ table {
   thead {
     position: sticky;
     top: 0;
-    font-size: 14px;
+    font-size: 18px;
     border-bottom: 2px solid rgba(206, 205, 205, 0.7);
   
     tr {
@@ -37,7 +37,7 @@ table {
         }
 
         img {
-          height: 24px;
+          height: 30px;
         }
 
         button {
