--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,5 +17,5 @@ bb-header,
 bb-footer {
   flex-shrink: 0;
   width: 100%;
-  background-color: hsla(97, 35%, 78%, 0.4);
+  background-color: hsla(97, 35%, 88%);
 }
