feat(frontend): Add loading spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <main>
 	<bb-bet-table></bb-bet-table>
 	<bb-bet-editor></bb-bet-editor>
+	<span *ngIf="isLoading"
+				class="loading-spinner">
+	</span>
 </main>
 <bb-footer></bb-footer>
