test(frontend): Write static HTML rendering unit tests; refactor(frontend): Implement separate 'isEditorOpen$' subscription in bet-editor

--- a/src/app/bet-editor/bet-editor.component.html
+++ b/src/app/bet-editor/bet-editor.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="display$ | async as display">
+<ng-container *ngIf="display">
 	<section [class.open]="display"
 					 (click)="onClose()">
 		<div class="bet-editor-content"
