feat(frontend): Shut down betting component now that the World Cup tournament is over

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
 <bb-header></bb-header>
 <main>
-	<bb-bet-table></bb-bet-table>
-	<bb-bet-editor></bb-bet-editor>
+	<!-- <bb-bet-table></bb-bet-table> -->
+	<!-- <bb-bet-editor></bb-bet-editor> -->
+	<div class="notice">
+		The 2022 Brewski Bets season has now ended.<br /><br />
+		It was a very close match but congratulations to <b>Kasin</b>,
+		crowned <b>2022 Brewski Bets Top Brewski Bet Better&#8482;</b>
+		This marks Kasin's first victory since 2018.<br /><br />
+		See you in two years for UEFA&nbsp;EURO&nbsp;2024&#8482;!<br />
+	</div>
 	<span *ngIf="isLoading"
 				class="loading-spinner">
 	</span>
