feat: Update home page notice text and README.md

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 		It was a very close match but congratulations to <b>Kasin</b>,
 		crowned <b>2022 Brewski Bets Top Brewski Bet Better&#8482;</b>
 		This marks Kasin's first victory since 2018.<br /><br />
-		See you in two years for UEFA&nbsp;EURO&nbsp;2024&#8482;!<br />
+		See you in four years for FIFA World Cup 2026!<br />
 	</div>
 	<span *ngIf="isLoading"
 				class="loading-spinner">
